Closed
Bug 429020
Opened 17 years ago
Closed 17 years ago
Scrollbars jump when being clicked and held to scroll down page.
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: hyperpal, Assigned: mstange)
References
Details
(Keywords: regression)
Attachments
(2 files, 2 obsolete files)
9.66 KB,
patch
|
Details | Diff | Splinter Review | |
1.10 KB,
text/html
|
Details |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b5) Gecko/2008032619 Firefox/3.0b5
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b5) Gecko/2008032619 Firefox/3.0b5
If you scroll to a middle of the page (so the scroll bar is half way down) and click and hold the scroll bar, the page will immediately jump up. When you pull the scroll bar down (still holding the mouse) it will jump back to where it was originally and start scrolling smoothly.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Comment 1•17 years ago
|
||
Confirming.
In order to be able to see the bug, you have to choose "Click in the scrollbar to: Scroll to here" in the OS X appearance prefs panel.
Firefox 2 doesn't have this bug => regression.
Status: UNCONFIRMED → NEW
Component: General → XP Toolkit/Widgets
Ever confirmed: true
Keywords: regression
OS: Mac OS X → All
Product: Firefox → Core
Hardware: Macintosh → All
Version: unspecified → Trunk
Updated•17 years ago
|
Assignee: nobody → jag
QA Contact: general → xptoolkit.widgets
Assignee | ||
Comment 2•17 years ago
|
||
- // On Mac the option key inverts the scroll-to-here preference.
- PRBool invertScrollToClick = PR_FALSE;
- mouseEvent->GetAltKey(&invertScrollToClick);
Why are we getting rid of this?
Assignee | ||
Comment 5•17 years ago
|
||
Because that's only true when the mouse is over the scrollbar track.
When clicking the thumb, on Mac OS X the scrollbar shouldn't scroll to click, regardless of preference and pressed keys.
nsSliderFrame::MouseDown only handles clicks on the thumb. Clicks in the scrollbar track area are handled by nsSliderFrame::HandleEvent.
Attachment #316626 -
Flags: superreview+
Attachment #316626 -
Flags: review?(roc)
Attachment #316626 -
Flags: review+
Assignee | ||
Comment 6•17 years ago
|
||
Comment on attachment 316626 [details] [diff] [review]
Fix v1.0: fix jumping bug, disable scroll-to-click on the thumb on Mac OS X, fix mouse button handling, add scrollbar tests
Requesting approval1.9:
Simple fix for an annoying glitch, very low risk, tests included.
Attachment #316626 -
Flags: approval1.9?
Comment 7•17 years ago
|
||
Comment on attachment 316626 [details] [diff] [review]
Fix v1.0: fix jumping bug, disable scroll-to-click on the thumb on Mac OS X, fix mouse button handling, add scrollbar tests
a1.9=beltzner
Attachment #316626 -
Flags: approval1.9? → approval1.9+
Markus, you don't have CVS access, right? (Do you want it?)
Keywords: checkin-needed
Assignee | ||
Comment 9•17 years ago
|
||
Wow. That would be cool.
Comment 11•17 years ago
|
||
I didn't check this in because the test added by this patch fails for me, on Mac, when run in the iframe from the main test runner (e.g. runtests.py --test-path=toolkit/content/ --autorun). Running it directly passes.
Keywords: checkin-needed
Assignee | ||
Comment 12•17 years ago
|
||
Huh. Thanks for checking, I'll see what I can do.
Assignee | ||
Comment 13•17 years ago
|
||
In the iframe the scrollbar had a different size, so the scrollbar thumb was smaller and the synthesized click didn't hit it.
Now the scrollbar is always 500px wide.
Assignee | ||
Updated•17 years ago
|
Attachment #316626 -
Attachment is obsolete: true
Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 14•17 years ago
|
||
OK... my patch breaks the test for the scale control. I'll have a look at that tomorrow.
Keywords: checkin-needed
Assignee | ||
Updated•17 years ago
|
Attachment #317098 -
Attachment is obsolete: true
Assignee | ||
Comment 15•17 years ago
|
||
Never mind. The scale test fails for me without the patch, too.
Keywords: checkin-needed
Assignee | ||
Updated•17 years ago
|
Attachment #317098 -
Attachment is obsolete: false
Comment 16•17 years ago
|
||
With the latest patch, 4 "On platforms other than Mac OS X, holding shift should enable scroll-to-click on the scrollbar thumb." tests are failing for me, on Windows.
Keywords: checkin-needed
Assignee | ||
Comment 17•17 years ago
|
||
Thank you, Gavin. I think I've found the bug in the test (the mouse button wasn't checked), could you test again?
Attachment #317098 -
Attachment is obsolete: true
Comment 18•17 years ago
|
||
Thanks Markus, the test now passes on Windows and Mac for me. I'll check this in later today.
Keywords: checkin-needed
Comment 19•17 years ago
|
||
mozilla/layout/xul/base/src/nsSliderFrame.cpp 1.181
mozilla/toolkit/content/tests/widgets/Makefile.in 1.57
mozilla/toolkit/content/tests/widgets/test_scrollbar.xul 1.1
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Comment 20•17 years ago
|
||
Could this have caused bug 430723?
Comment 21•17 years ago
|
||
2 of the tests are failing here, because I use 'fat' scrollbars (10px wider than normal).
This patch fixes the failures for me, it's a bit of a kludge, because I don't really understand how the test works.
I wonder where the value of 160 for x is coming from.
Assignee | ||
Comment 22•17 years ago
|
||
(In reply to comment #21)
> I wonder where the value of 160 for x is coming from.
Pretty much guesswork; I needed a point that was between the center and the right edge of the scrollbar thumb and 160 did the job. - Not good enough, as it turns out.
I'm fine with your patch; using the scrollbar height as a hint for the variation of the thumb size sounds like a good idea.
Updated•11 years ago
|
Attachment #321050 -
Attachment mime type: application/octet-stream → text/html
You need to log in
before you can comment on or make changes to this bug.
Description
•