Bug 429020: Scrollbars jump when being clicked and held to scroll down page, patch by Markus Stange <mstange@themasta.com>, r+sr=roc, a=beltzner